--- a/projects/animation.html
+++ b/projects/animation.html
@@ -61,6 +61,28 @@
 
             <div class="project-card grid">
                 <div class="project-media">
+                    <iframe src="https://www.youtube.com/embed/exGRy5jo9fA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="project-desc">
+                    <div class="project-title">
+                        <h3 class="title-name">Anubis (Level 3 Cutscene)</h3>
+                        <div class="title-tag">
+                            <span>[Group]</span> Cutscene Video - Unreal Engine 4, Bridge
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <p>
+                            This video is the cutscene for my group project - action-adventure game, Anubis.
+                        </p>
+                        <p>
+                            I am responsible for creating the cutscene in Level 3, along with some UI design and programming.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card grid">
+                <div class="project-media">
                     <iframe src="https://www.youtube.com/embed/FXdysHTRKPQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="project-desc">
@@ -72,7 +94,7 @@
                     </div>
                     <div class="project-info">
                         <p>
-                            This cutscene's story starts with a woman who woke up with no memory in an abandoned house deep in a lost forest. As she explores the forest, she discovered a broken mansion. Inside, she saw a bloodstained chair surrounded by crows, which triggered fragmented flashbacks and began to unlock her buried memories.
+                            This story starts with a woman who woke up with no memory in an abandoned house deep in a lost forest. As she explores the forest, she discovered a broken mansion. Inside, she saw a bloodstained chair surrounded by crows, which triggered fragmented flashbacks and began to unlock her buried memories.
                         </p>
                     </div>
                 </div>
@@ -103,6 +125,11 @@
                         <a href="https://youtu.be/Qs_rjEJ1A_k" target="_blank" class="btn">
                             <i class="uil uil-youtube"></i> Full Video
                         </a>
+                    </div>
+                    <div class="project-btn">
+                        <div class="btn modal-btn">
+                            <i class="uil uil-presentation-play"></i> Figma
+                        </div>
                     </div>
                 </div>
             </div>
