--- a/projects/game.html
+++ b/projects/game.html
@@ -57,6 +57,33 @@
         
         <h2 class="section-title">Game Development.</h2>
 
+        <div class="project-card grid">
+            <div class="project-media">
+                <iframe src="https://www.youtube.com/embed/exGRy5jo9fA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div class="project-desc">
+                <div class="project-title">
+                    <h3 class="title-name">Anubis (Level 3 Cutscene)</h3>
+                    <div class="title-tag">
+                        <span>[Group]</span> Cutscene Video - Unreal Engine 4, Bridge
+                    </div>
+                </div>
+                <div class="project-info">
+                    <p>
+                        This video is the cutscene for my group project - action-adventure game, Anubis.
+                    </p>
+                    <p>
+                        I am responsible for creating the cutscene in Level 3, along with some UI design and programming.
+                    </p>
+                </div>
+                <div class="project-btn">
+                    <div class="btn modal-btn">
+                        <i class="uil uil-presentation-play"></i> Figma
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="project-content">
             <div class="project-card grid">
                 <div class="project-media">
@@ -101,6 +128,25 @@
 
             <div class="project-card grid">
                 <div class="project-media">
+                    <iframe src="https://www.youtube.com/embed/uEmJd0UUolk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="project-desc">
+                    <div class="project-title">
+                        <h3 class="title-name">Escape from Apartment</h3>
+                        <div class="title-tag">
+                            <span>[Invidual]</span> FPS Game - Unity, C#
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <p>
+                            This is my final year project game demo. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card grid">
+                <div class="project-media">
                     <iframe src="https://www.youtube.com/embed/r0aGJHJcr5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="project-desc">
@@ -120,7 +166,7 @@
                     </div>
                     <div class="project-btn">
                         <div class="btn modal-btn">
-                            <i class="uil uil-presentation-play"></i> UI
+                            <i class="uil uil-presentation-play"></i> Figma
                         </div>
                     </div>
                 </div>
@@ -128,9 +174,9 @@
 
             <div class="project-card grid">
                 <div class="project-media">
-                    <video controls>
-                        <source src="./assets/video/VR Music Mesuem.mp4" type="video/mp4">
-                    </video>
+                    <div class="project-media">
+                        <iframe src="https://www.youtube.com/embed/cyKdOevKW9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="project-desc">
                     <div class="project-title">
@@ -153,6 +199,21 @@
 
     </div>
 </section>
+
+<div class="project-modal">
+    <div class="modal-container container">
+        <div class="modal-header">
+            <h2 class="modal-title">Anubis UI</h2>
+            <!-- Close Button -->
+            <button class="modal-close" id="modal-close" data-modal="storia">
+                <i class="uil uil-times"></i>
+            </button>
+        </div>
+        <div class="modal-content">
+            <iframe src="https://embed.figma.com/design/Kv2tL1Q24DPLBmx5BrrgxB/UI?node-id=1-417&embed-host=share"allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
 
 <div class="project-modal">
     <div class="modal-container container">
