--- a/projects/app.html
+++ b/projects/app.html
@@ -61,6 +61,33 @@
 
             <div class="project-card grid">
                 <div class="project-media">
+                    <iframe src="https://www.youtube.com/embed/TEBdWl2jXxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="project-desc">
+                    <div class="project-title">
+                        <h3 class="title-name">AR Storybook - Goldilocks and the Three Bears</h3>
+                        <div class="title-tag">
+                            <span>[Individual]</span> AR App - Unity, Vuforia
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <p>
+                            This application is an AR interactive Storybook based on the story of Goldilocks and The Three Bears.
+                        </p>
+                        <p>
+                            I was take part in developing Story Selection Panel, Scene 5 and Scene 6. I also designed the UI elements for projects.
+                        </p>
+                    </div>
+                    <div class="project-btn">
+                        <div class="btn modal-btn">
+                            <i class="uil uil-presentation-play"></i> Figma
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card grid">
+                <div class="project-media">
                     <iframe src="https://www.youtube.com/embed/TyHb7bWhnqw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="project-desc">
@@ -121,7 +148,7 @@
                     </div>
                     <div class="project-btn">
                         <div class="btn modal-btn">
-                            <i class="uil uil-presentation-play"></i> UI
+                            <i class="uil uil-presentation-play"></i> Figma
                         </div>
                     </div>
                 </div>
@@ -131,6 +158,21 @@
 
     </div>
 </section>
+
+<div class="project-modal">
+    <div class="modal-container container">
+        <div class="modal-header">
+            <h2 class="modal-title">AR Storybook UI</h2>
+            <!-- Close Button -->
+            <button class="modal-close" id="modal-close" data-modal="storia">
+                <i class="uil uil-times"></i>
+            </button>
+        </div>
+        <div class="modal-content">
+            <iframe src="https://embed.figma.com/design/Kv2tL1Q24DPLBmx5BrrgxB/UI?node-id=1-5008&embed-host=share" allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
 
 <div class="project-modal">
     <div class="modal-container container">
