--- a/projects/game.html
+++ b/projects/game.html
@@ -101,6 +101,11 @@
                             This cutscene's story starts with a woman who woke up with no memory in an abandoned house deep in a lost forest. As she explores the forest, she discovered a broken mansion. Inside, she saw a bloodstained chair surrounded by crows, which triggered fragmented flashbacks and began to unlock her buried memories.
                         </p>
                     </div>
+                    <div class="project-btn">
+                        <a href="https://youtu.be/r0FnoEaTqWU" target="_blank" class="btn">
+                            <i class="uil uil-youtube"></i> Speed Level Design
+                        </a>
+                    </div>
                 </div>
             </div>
 
