--- a/index.html
+++ b/index.html
@@ -124,14 +124,13 @@
                 </div>
                 <div class="about-info">
 
-                        <span>My skills:</span>
+                        <span>My technical skills:</span>
                         <ul>
-                            <li>Game Development (Unity & Unreal 4)</li>
-                            <li>UI/UX Design (Figma)</li>
-                            <li>3D Modeling (3Ds & Maya)</li>
-                            <li>Animation (Animate CC & Maya)</li>
-                            <li>Front-End Development (HTML & CSS)</li>
-                            <li>Video Editing (Premiere Pro & After Effect)</li>
+                            <li>Unity & Unreal Engine 4</li>
+                            <li>Figma</li>
+                            <li>Autodesk 3Ds & Maya</li>
+                            <li>Premiere Pro, After Effect & Animate CC</li>
+                            <li>Programming Language: HTML & CSS</li>
                         </ul>
 
                 </div>
