Update video to others

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                     <div class="card-overlay"></div>
                 </div>
             </a>
-            <a href="./projects/video" class="project-box">
+            <a href="./projects/other" class="project-box">
                 <div class="card-container">
-                    <h3 class="card-title">Video Editing</h3>
+                    <h3 class="card-title">Others</h3>
                     <img src="./assets/image/sc_video.jpg" alt="" class="card-bg">
                     <div class="card-overlay"></div>
                 </div>
