--- a/projects/other.html
+++ b/projects/other.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Projects - Animation</title>
+<title>Projects - Other</title>
 <meta name="title" content="JH's Portfolio.">
 <meta name="description" content="Welcome to my portfolio website.">
 
@@ -37,7 +37,7 @@
                     <a href="../projects/game" class="nav-link">Game</a>
                 </li>
                 <!-- <li class="nav-item">
-                    <a href="../projects/video" class="nav-link">Video Edit</a>
+                    <a href="../projects/other" class="nav-link">Other</a>
                 </li> -->
             </ul>
             <!-- Close Button -->
