--- a/projects/game.html
+++ b/projects/game.html
@@ -37,7 +37,7 @@
                     <a href="../projects/game" class="nav-link">Game</a>
                 </li> -->
                 <li class="nav-item">
-                    <a href="../projects/video" class="nav-link">Video Edit</a>
+                    <a href="../projects/other" class="nav-link">Others</a>
                 </li>
             </ul>
             <!-- Close Button -->
