--- a/projects/other.html
+++ b/projects/other.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Projects - Other</title>
+<title>Projects - Others</title>
 <meta name="title" content="JH's Portfolio.">
 <meta name="description" content="Welcome to my portfolio website.">
 
@@ -36,9 +36,9 @@
                 <li class="nav-item">
                     <a href="../projects/game" class="nav-link">Game</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a href="../projects/other" class="nav-link">Other</a>
-                </li> -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link link-active">Others</a>
+                </li>
             </ul>
             <!-- Close Button -->
             <div class="nav-close" id="nav-close">
@@ -54,6 +54,36 @@
 
 <section class="project section" id="project">
     <div class="project-container container">
+
+        <h2 class="section-title">3D Modeling.</h2>
+
+        <div class="model-content">
+
+            <div class="model-card">
+                <img src="../assets/image/Model2.jpg" alt="Model">
+                <div class="model-overlay"></div>
+                <div class="model-tag">Autodesk Maya</div>
+            </div>
+
+            <div class="model-card">
+                <img src="../assets/image/Model1.jpg" alt="Model">
+                <div class="model-overlay"></div>
+                <div class="model-tag">Autodesk Maya</div>
+            </div>
+
+            <div class="model-card">
+                <img src="../assets/image/poster2.jpg" alt="Model">
+                <div class="model-overlay"></div>
+                <div class="model-tag">Autodesk 3ds Max</div>
+            </div>
+
+            <div class="model-card">
+                <img src="../assets/image/Teapot.jpg" alt="Model">
+                <div class="model-overlay"></div>
+                <div class="model-tag">Autodesk 3ds Max</div>
+            </div>
+
+        </div>
         
         <h2 class="section-title">Video Editing.</h2>
 
