--- a/projects/animation.html
+++ b/projects/animation.html
@@ -27,9 +27,9 @@
                 <li class="nav-item">
                     <a href="/" class="nav-link">Home</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a href="../projects/animation" class="nav-link">Animation</a>
-                </li> -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link link-active">Animation</a>
+                </li>
                 <li class="nav-item">
                     <a href="../projects/app" class="nav-link">App</a>
                 </li>
@@ -37,7 +37,7 @@
                     <a href="../projects/game" class="nav-link">Game</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../projects/video" class="nav-link">Video Edit</a>
+                    <a href="../projects/other" class="nav-link">Others</a>
                 </li>
             </ul>
             <!-- Close Button -->
