--- a/projects/app.html
+++ b/projects/app.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Projects - Animation</title>
+<title>Projects - App Development</title>
 <meta name="title" content="JH's Portfolio.">
 <meta name="description" content="Welcome to my portfolio website.">
 
@@ -30,14 +30,14 @@
                 <li class="nav-item">
                     <a href="../projects/animation" class="nav-link">Animation</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a href="../projects/app" class="nav-link">App</a>
-                </li> -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link link-active">App</a>
+                </li>
                 <li class="nav-item">
                     <a href="../projects/game" class="nav-link">Game</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../projects/video" class="nav-link">Video Edit</a>
+                    <a href="../projects/other" class="nav-link">Others</a>
                 </li>
             </ul>
             <!-- Close Button -->
