--- a/projects/game.html
+++ b/projects/game.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Projects - Game</title>
+<title>Projects - Game Development</title>
 <meta name="title" content="JH's Portfolio.">
 <meta name="description" content="Welcome to my portfolio website.">
 
@@ -33,9 +33,9 @@
                 <li class="nav-item">
                     <a href="../projects/app" class="nav-link">App</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a href="../projects/game" class="nav-link">Game</a>
-                </li> -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link link-active">Game</a>
+                </li>
                 <li class="nav-item">
                     <a href="../projects/other" class="nav-link">Others</a>
                 </li>
