--- a/projects/other.html
+++ b/projects/other.html
@@ -84,6 +84,8 @@
             </div>
 
         </div>
+
+        <div class="space"></div>
         
         <h2 class="section-title">Video Editing.</h2>
 
