--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <li>Figma</li>
                             <li>Autodesk 3Ds & Maya</li>
                             <li>Premiere Pro, After Effect & Animate CC</li>
-                            <li>Programming Language: HTML & CSS</li>
+                            <li>Programming Language: HTML, CSS, C# & Blueprint</li>
                         </ul>
 
                 </div>
