--- a/projects/video.html
+++ b/projects/video.html
@@ -37,7 +37,7 @@
                     <a href="../projects/game" class="nav-link">Game</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link link-active">Others</a>
+                    <a href="#" class="nav-link link-active">Video</a>
                 </li>
             </ul>
             <!-- Close Button -->
