--- a/projects/video.html
+++ b/projects/video.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Projects - Others</title>
+<title>Projects - Video</title>
 <meta name="title" content="JH's Portfolio.">
 <meta name="description" content="Welcome to my portfolio website.">
 
